# DATN_Vibe_code

./: .env.example  .gitignore  pyproject.toml  walkthrough.md
ai-server/: .gitignore  AI-SERVER_OVERVIEW.md  README.md  implementation_plan.md  overview.md  pyproject.toml  task.md
ai-server/src/rag_backend/: main.py
ai-server/src/rag_backend/application/agents/: agent_tools.py  paralegal_agent.py
ai-server/src/rag_backend/application/dto/: evaluation_dto.py  ingestion_dto.py  query_dto.py
ai-server/src/rag_backend/application/prompt/: prompt_manager.py
ai-server/src/rag_backend/application/services/: evaluation_service.py  ingestion_service.py  multi_agent_service.py  query_service.py  rag_pipeline.py  reflection_service.py
ai-server/src/rag_backend/application/utils/: chunk_utils.py
ai-server/src/rag_backend/config/: settings.py
ai-server/src/rag_backend/di/: container.py
ai-server/src/rag_backend/domain/: __init__.py  exceptions.py
ai-server/src/rag_backend/domain/interfaces/: chunking_strategy.py  context_builder.py  embedding_provider.py  input_processor.py  llm_provider.py  reranker.py  vector_repository.py
ai-server/src/rag_backend/domain/models/: agent_state.py  collection_registry.py  document.py  embedding.py  query.py
ai-server/src/rag_backend/infrastructure/chunking/: legal_article_chunker.py
ai-server/src/rag_backend/infrastructure/embeddings/: sentence_transformer_provider.py
ai-server/src/rag_backend/infrastructure/input_processors/: factory.py  pdf_processor.py  txt_processor.py
ai-server/src/rag_backend/infrastructure/llm/: google_provider.py  groq_provider.py  langchain_provider.py
ai-server/src/rag_backend/infrastructure/mongodb/: mongodb_legal_reader.py
ai-server/src/rag_backend/infrastructure/multimodal/: __init__.py  image_to_text.py  speech_to_text.py
ai-server/src/rag_backend/infrastructure/query/: collection_router.py  llm_query_rewriter.py
ai-server/src/rag_backend/infrastructure/reranking/: cross_encoder_reranker.py
ai-server/src/rag_backend/infrastructure/vector_db/: weaviate_repository.py
ai-server/src/rag_backend/presentation/controllers/: ingestion_controller.py  query_controller.py
ai-server/src/rag_backend/presentation/middlewares/: error_handler.py  tenant_middleware.py
ai-server/src/rag_backend/presentation/routes/: health_routes.py  ingestion_routes.py  query_routes.py
ai-server/src/rag_backend/presentation/schemas/: agent_schemas.py  ingestion_schemas.py  query_schemas.py
ai-server/tests/evaluation/: agent_evaluator.py  data_generator.py  ragas_runner.py
ai-server/tests/integration/: test_api.py
ai-server/tests/unit/application/: test_ingestion_service.py  test_multi_agent_service.py
backend/: BACKEND_OVERVIEW.md  pom.xml
frontend/: FRONTEND_OVERVIEW.md  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/app/: App.tsx  routes.tsx  types.ts
frontend/src/app/api/: adminApi.ts  adminService.ts  apiClient.ts  auth.api.ts  chatService.ts  flashcardService.ts  legalQaApi.ts  legalService.ts  quizService.ts  settingsService.ts
frontend/src/styles/: app.css  fonts.css
frontend/src/test/: setup.ts
src/rag_backend/: __init__.py  main.py
src/rag_backend/config/: settings.py
src/rag_backend/di/: container.py
src/rag_backend/domain/: exceptions.py
src/rag_backend/presentation/: __init__.py
(+158 files in other folders)
