[project]
name = "rag-backend"
version = "0.1.0"
description = "Production-ready Advanced RAG Backend System with Clean Architecture"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Settings & Config
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    # Embeddings & Reranking
    "sentence-transformers>=3.0.0",
    # Vector Database
    "weaviate-client>=4.0",
    # HTTP client
    "httpx>=0.27",
    "langgraph>=1.1.3",
    "langchain-core>=1.2.22",
    "motor>=3.7.1",
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ragas>=0.1.7",
    "datasets>=2.19.0",
    "pandas>=2.0.0",
]
multimodal = [
    "openai-whisper>=20230918",
    "pytesseract>=0.3",
    "Pillow>=10.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rag_backend"]
